--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "auto-reload-brunch": "^2.7.1",
     "babel-brunch": "^6.1.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "brunch": "^2.10.12",
@@ -31,6 +32,7 @@
     "postcss-brunch": "^2.1.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.0.0",
+    "react-modal": "^3.1.7",
     "uglify-js-brunch": "^2.10.0"
   }
 }
