--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
     "clean-css-brunch": "^2.10.0",
     "postcss-brunch": "^2.1.0",
     "postcss-cssnext": "^3.0.2",
+    "postcss-font-magician": "^2.1.0",
+    "postcss-hexrgba": "^1.0.0",
     "postcss-import": "^11.0.0",
+    "postcss-mixins": "^6.2.0",
+    "postcss-nested": "^3.0.0",
+    "postcss-simple-vars": "^4.1.0",
     "react-modal": "^3.1.7",
     "uglify-js-brunch": "^2.10.0"
   }
